# Caldera

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
src/core/engine/: Camera.cpp  Camera.h  Gizmos.cpp  Gizmos.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/core/engine/components/: BoundingBox.h  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PointCloud.cpp  PointCloud.h  Shader.cpp  Shader.h  Transform.h
src/core/engine/shaders/: cloud.frag  cloud.vert  gizmo.vert  mesh.frag  mesh.vert  pc.frag  pc.vert
src/core/utilities/: Loader.cpp  Loader.h  ModelLoader.cpp  ModelLoader.h
src/gui/: App.cpp  App.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ViewportWidget.cpp  ViewportWidget.h
